# Code-Challenge-Capital-Gain

./: .gitignore  README.md  challenge.md  pyproject.toml
src/capital_gains_calculator/: __main__.py
src/capital_gains_calculator/application/: dtos.py
src/capital_gains_calculator/application/use_cases/: __init__.py  calculate_taxes_from_operations.py
src/capital_gains_calculator/domain/: models.py  services.py
src/capital_gains_calculator/infrastructure/: di_container.py
src/capital_gains_calculator/infrastructure/cli/: main.py
tests/acceptance/: test_cli_scenarios.py
tests/acceptance/fixtures/: case_1_input.txt  case_2_input.txt  case_2_output.json  case_3_input.txt  case_3_output.json  case_4_input.txt  case_4_output.json  case_5_input.txt  case_5_output.json  case_6_input.txt  case_6_output.json  case_7_input.txt  case_7_output.json  case_8_input.txt  case_8_output.json  case_9_input.txt  case_9_output.json
tests/integration/application/: test_use_cases.py
tests/unit/domain/services/: test_tax_calculator_service.py
